# jaso

./: .gitignore  LICENSE  README.md  build.sh  build_dmg.sh  icon.icns  main.py  pyproject.toml  setup.py
