[tool.poetry]
name = "jaso"
version = "0.1.0"
description = ""
authors = ["Hansol-Lim <molmoty@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^4.0.0"
rumps = "^0.4.0"
setuptools = "^80.9.0"
jaraco-text = "^4.0.0"
macholib = "^1.16.3"
modulegraph = "^0.19.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
